Cart num change, add item and render cart list

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <a href="" class="header__cart-icon-link">
                   <i class="header__cart-icon bi bi-cart">
                     <!-- No cart: empty -->
-                    <div class="header__cart-numb">3</div>
+                    <div class="header__cart-numb">0</div>
                   </i>
                 </a>
                 <!-- No cart: header__cart-list--empty -->
@@ -221,47 +221,8 @@
                   <div class="header__cart-arrow"></div>
                   <div class="header__cart-list-container">
                     <div class="header__cart-title">Sản phẩm mới thêm</div>
-                    <div class="header__cart-item">
-                      <a href="" class="header__cart-link">
-                        <img
-                          class="header__cart-img"
-                          src="./assets/img/ao.png"
-                          alt="item-ao"
-                        />
-                        <div class="header__cart-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
-                          Wind
-                        </div>
-                        <div class="header__cart-price">150.000</div>
-                      </a>
-                    </div>
-                    <div class="header__cart-item">
-                      <a href="" class="header__cart-link">
-                        <img
-                          class="header__cart-img"
-                          src="./assets/img/ao.png"
-                          alt="item-ao"
-                        />
-                        <div class="header__cart-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
-                          Wind
-                        </div>
-                        <div class="header__cart-price">150.000</div>
-                      </a>
-                    </div>
-                    <div class="header__cart-item">
-                      <a href="" class="header__cart-link">
-                        <img
-                          class="header__cart-img"
-                          src="./assets/img/ao.png"
-                          alt="item-ao"
-                        />
-                        <div class="header__cart-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
-                          Wind
-                        </div>
-                        <div class="header__cart-price">150.000</div>
-                      </a>
+                    <div class="header__cart-list-item">
+                      <!-- render -->
                     </div>
                     <div class="header__cart-item">
                       <a href="" class="header__cart-button">Xem giỏ hàng</a>
@@ -477,49 +438,77 @@
                   ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-amex"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-amex"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-cod"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-cod"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                   <div class="footer__payment-backround footer__payment-installment"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-installment"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                   <div class="footer__payment-backround footer__payment-airpay"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-airpay"
+                  ></div>
                 </li>
               </ul>
               <h3 class="footer__heading">ĐƠN VỊ VẬN CHUYỂN</h3>
               <ul class="footer__list-shipping">
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-express"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-express"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-ghtk"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-ghtk"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-ghn"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-ghn"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-viettel"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-viettel"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-vnpost"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-vnpost"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-jnt"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-jnt"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-grab"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-grab"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-now"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-now"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-ninja"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-ninja"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround footer__payment-best"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-best"
+                  ></div>
                 </li>
               </ul>
             </div>
@@ -584,5 +573,6 @@
     <script type="module" src="./assets/js/data.js"></script>
     <script type="module" src="./assets/js/product.js"></script>
     <script type="module" src="./assets/js/pagination.js"></script>
+    <script type="module" src="./assets/js/cart.js"></script>
   </body>
 </html>
