modify getaddcartBtn, add app.js(for class base)

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
       </footer>
     </div>
     <script src="./assets/js/helper.js"></script>
+    <!-- <script src="./assets/js/app.js"></script> -->
     <script type="module" src="./assets/js/data.js"></script>
     <script type="module" src="./assets/js/product.js"></script>
     <script type="module" src="./assets/js/pagination.js"></script>
