generate clean webpack

--- a/webpack-demo/src/index.html
+++ b/webpack-demo/src/index.html
@@ -570,11 +570,6 @@
       </footer>
     </div>
     <script src="../src/helper.js"></script>
-    <!-- <script src="./assets/js/app.js"></script> -->
-    <script type="module" src="../src/data.js"></script>
-    <script type="module" src="main.js"></script>
-    <!-- <script type="module" src="../src/constants.js"></script>
-    <script type="module" src="../src/pagination.js"></script>
-    <script type="module" src="../src/cart.js"></script> -->
+    <script src="main.js"></script>
   </body>
 </html>
