switch to class base

--- a/index.html
+++ b/index.html
@@ -571,9 +571,9 @@
 </div>
 <script src="./assets/js/helper.js"></script>
 <script type="module" src="./assets/js/data.js"></script>
-<!-- Js class base without cart feature, can replace to product.js for testing class -->
-<!-- <script src="./assets/jsTesting/app.js"></script> -->
-<script type="module" src="./assets/js/product.js"></script>
+<!-- Js class base without cart feature, can replace with product.js for testing class -->
+<script src="./assets/jsTesting/app.js"></script>
+<!--<script type="module" src="./assets/js/product.js"></script>-->
 <script type="module" src="./assets/js/pagination.js"></script>
 <script type="module" src="./assets/js/cart.js"></script>
 </body>
